outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-8593231431544825838_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    important as exploration progresses, using dynamically adjusted weights where connectivity and destination distance dominate initially, and local distance gains importance later.}
                                                                                                                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    important as exploration progresses, using dynamically adjusted weights where connectivity and destination distance dominate initially, and local distance gains importance later.}
                                                                                                                                                                                      ^
SyntaxError: unmatched '}'
